--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
   <head>
     <meta charset="UTF-8">
     <title>The Odin Project | Sign Up Form</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+      <div class="sidebar">
+          <img class="sidebar__image" src="images/sidebar.jpg" />
+          <div class="logo">
+              <img class="logo__icon" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" />
+              <p class="logo__text">odin</p>
+          </div>
+          <div class="sidebar__image-credit">
+              <p>Photo by <a href="https://unsplash.com/@carlamstgo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Carla Santiago</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-feather-and-some-wood-7MoQzYXa-O0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+          </div>
+      </div>
+      <main>
+          <div class="site-info"></div>
+          <form action="#" method="get">
+              <fieldset>
+                <legend>Let's do this!</legend>
+                <div>
+                    <label for="first_name">first name</label>
+                    <input type="text" id="first_name" name="first_name" />
+                    <label for="last_name">last name</label>
+                    <input type="text" id="last_name" name="last_name" />
+                </div>
+                <div>
+                    <label for="email">email</label>
+                    <input type="email" id="email" name="email" />
+                    <label for="phone_number">phone number</label>
+                    <input type="text" id="phone_number" name="phone_number" />
+                </div>
+                <div>
+                    <label for="password">password</label>
+                    <input type="password" id="password" name="password" required />
+                    <label for="confirm_password">confirm password</label>
+                    <input type="password" id="confirm_password" name="confirm_password" required />
+                </div>
+              </fieldset>
+              <button type="submit">Create Account</button>
+          </form>
+          <p>Already have an account? <a href="#">Log In</a></p>
+      </main>
   </body>
 </html>
