--- a/index.html
+++ b/index.html
@@ -19,32 +19,49 @@
           </div>
       </div>
       <main>
-          <div class="site-info"></div>
+          <div class="site-info">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare suspendisse sed nisi lacus sed viverra tellus in. Mauris rhoncus <em>aenean</em> vel elit.</p>
+              <p>You <em>know</em> you want to.</p>
+          </div>
           <form action="#" method="get">
               <fieldset>
                 <legend>Let's do this!</legend>
-                <div>
-                    <label for="first_name">first name</label>
-                    <input type="text" id="first_name" name="first_name" />
-                    <label for="last_name">last name</label>
-                    <input type="text" id="last_name" name="last_name" />
+                <div class="form__row">
+                    <div>
+                        <label for="first_name">first name</label>
+                        <input type="text" id="first_name" name="first_name" />
+                    </div>
+                    <div>
+                        <label for="last_name">last name</label>
+                        <input type="text" id="last_name" name="last_name" />
+                    </div>
                 </div>
-                <div>
-                    <label for="email">email</label>
-                    <input type="email" id="email" name="email" />
-                    <label for="phone_number">phone number</label>
-                    <input type="text" id="phone_number" name="phone_number" />
+                <div class="form__row">
+                    <div>
+                        <label for="email">email</label>
+                        <input type="email" id="email" name="email" />
+                    </div>
+                    <div>
+                        <label for="phone_number">phone number</label>
+                        <input type="text" id="phone_number" name="phone_number" />
+                    </div>
                 </div>
-                <div>
-                    <label for="password">password</label>
-                    <input type="password" id="password" name="password" required />
-                    <label for="confirm_password">confirm password</label>
-                    <input type="password" id="confirm_password" name="confirm_password" required />
+                <div class="form__row">
+                    <div>
+                        <label for="password">password</label>
+                        <input type="password" id="password" name="password" required />
+                    </div>
+                    <div>
+                        <label for="confirm_password">confirm password</label>
+                        <input type="password" id="confirm_password" name="confirm_password" required />
+                    </div>
                 </div>
               </fieldset>
-              <button type="submit">Create Account</button>
           </form>
-          <p>Already have an account? <a href="#">Log In</a></p>
+          <div class="form-submit">
+            <button class="btn--submit" type="submit">Create Account</button>
+            <p>Already have an account? <a href="#">Log In</a></p>
+          </div>
       </main>
   </body>
 </html>
